# nas-video-converter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.intel-qsv.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cleanup-ghcr.yml
app/: __init__.py  config.py  database.py  ffmpeg_tools.py  main.py  media_scanner.py  safety.py  sse.py  task_manager.py
app/static/: app.js  files.html  files.js  index.html  records.html  records.js  styles.css
docs/: synology.md
scripts/: docker-entrypoint.sh
tests/: test_api.py  test_classification.py  test_control.py  test_database.py  test_events.py  test_frontend.py  test_hardware.py  test_real_pipeline.py  test_safety.py
